scrollbar issue fixed

--- a/assets/css/wpsp-post-panel.css
+++ b/assets/css/wpsp-post-panel.css
@@ -38,6 +38,8 @@
     box-sizing: border-box;
     align-items: center;
     border-radius: 14px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .wpsp-post-panel-modal-content {
